node-main/deps/v8/test/message/fail/modules-import5.mjs
// Copyright 2016 the V8 project authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

import {a as b} from "modules-import5.mjs";
export {c as a} from "modules-import5.mjs";
import {c} from "modules-import5.mjs";
